# lookingGlass

./: .gitignore  Focus Duration.glass  data.json  fileOpener.bat  glass.py  idOpener.bat  jd.json  pyproject.toml  setup.py  testFileOpener.py
docs/: idFormat.md  projectsTemplate.md  setupCrossStorageManager.md  setupRegistryStuff.md
glass/: __main__.py  backup.py  configmanager.py  drivemanager.py  project.py  standin.py  tools.py  util.py  workspace.py
learning/: config.py  fileManager.py  notes.py  settings.json  setup.py
